# docverify-ai

./: .env.render  .gitignore  CASE_STUDY.md  DEMO_VIDEO_SCRIPT.md  Dockerfile  Dockerfile.render  Dockerfile.ui  PRD.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-deploy.txt  start-ui.sh  walkthrough.md.resolved
scripts/: check_env.py  generate_sample.py  generate_samples.py  generate_valid_sample.py  setup_supabase.sql  test_api.py  test_classification.py  test_extraction.py  test_ocr_integration.py  test_pipeline.py  test_preprocessing.py  verify_agents.py
src/api/: __init__.py  main.py  storage.py
src/classification/: engine.py  rules.py
src/core/: config.py  logger.py
src/database/: __init__.py  client.py  models.py
src/database/repositories/: __init__.py  audit_repo.py  document_repo.py  verification_repo.py
src/extraction/: engine.py  patterns.py
src/mcp/: __init__.py  server.py
src/ocr/: __init__.py  easy_engine.py  ensemble.py  paddle_engine.py  tesseract_engine.py
src/orchestration/: agent_manager.py  processor.py
src/orchestration/agents/: __init__.py  base_agent.py  classification_agent.py  extraction_agent.py  fraud_agent.py  ocr_agent.py  validation_agent.py
src/preprocessing/: denoise.py  deskew.py  enhance.py  pipeline.py
src/validation/: engine.py  validators.py
ui/: app.py
