[project]
name = "docverify-ai"
version = "0.1.0"
description = "AI-Powered Document Verification Platform"
authors = [
    {name = "DocVerify Team",email = "team@docverify.ai"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "streamlit (>=1.52.2,<2.0.0)",
    "supabase (>=2.27.1,<3.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "langchain (<0.3.0)",
    "langchain-google-genai (<2.0.0)",
    "langchain-community (<0.3.0)",
    "google-generativeai (<0.8.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "numpy (<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "faker (>=40.1.0,<41.0.0)",
    "opencv-python-headless (<4.11.0)",
    "paddlepaddle (>=3.2.2,<4.0.0)",
    "paddleocr (<2.9.0)",
    "setuptools (>=80.9.0,<81.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "ruff (>=0.14.10,<0.15.0)",
    "mypy (>=1.19.1,<2.0.0)"
]
